syntax = "proto3";
package gloo.plugins.core;
option go_package = "github.com/solo-io/solo-kit/projects/gloo/pkg/plugins/core";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

// Describes APIs and application-level information for services
// Gloo routes to. ServiceSpec is contained within the UpstreamSpec for certain types
// of upstreams, including Kubernetes, Consul, and Static.
// ServiceSpec configuration is opaque to Gloo and handled by Service Plugins.
message ServiceSpec {
    // Note to developers: new Service Plugins must be added to this oneof field
    // to be usable by Gloo.
    oneof plugin_type {
        string empty = 1;
    }
}

